
* Fixed a bug with default field values for columns for Firebird connection.

* Prevent a deadlock in declarative.threadSafeMethod() by not reacquiring
  the class lock.

* Fixed a bug in col.createSQL().

* Fixed a bug in converting date/time for years < 1000 (time.strptime()
  requires exactly 4 digits for %Y, hence a year < 1000 must be 0-padded).

SQLObject 0.7.7
===============

Released 10 May 2007.

Bug Fixes
---------

* Fixed a bug in SQLRelatedJoin that ignored per-instance connection.

* Fixed a bug in MySQL connection in case there is no charset in the DB URI.

SQLObject 0.7.6
===============

Released 3 May 2007.

Bug Fixes
---------

* Fixed a longstanding bug with .select() ignoring 'limit' parameter.

* Fixed a bug with absent comma in JOINs.

* Fixed sqlbuilder - .startswith(), .endswith() and .contains() assumed
  their parameter must be a string; now you can pass an SQLExpression:
  Table.q.name.contains(func.upper('a')), for example.

* Fixed a longstanding bug in sqlbuilder.Select() with groupBy being a
  sequence.

* Fixed a bug with Aliases in JOINs.

* Yet another patch to properly initialize MySQL connection encoding.

* Fixed a minor comparison problem in test_decimal.py.

* More documentation about orderBy.

SQLObject 0.7.5
===============

Released 11 Apr 2007.

Bug Fixes
---------

* Fixed test_deep_inheritance.py - setup classes in the correct order
  (required for Postgres 8.0+ which is strict about referential integrity).

* Fixed a bug in DateValidator caused by datetime being a subclass of date.

SQLObject 0.7.4
===============

Released 19 Mar 2007.

Small Features
--------------

* For MySQLdb 1.2.2+ call ping(True) on the connection to allow
  autoreconnect after a timeout.

Bug Fixes
---------

* Another round of changes to create/drop the tables in the right order
  in the command-line client `sqlobject-admin`.

* Fixed a bug in UnicodeField - allow comparison with None.

SQLObject 0.7.3
===============

Released 30 Jan 2007.